Jumping ui issue fixed

--- a/src/components/main/inventorybuilder/SearchItem/SearchItem.module.css
+++ b/src/components/main/inventorybuilder/SearchItem/SearchItem.module.css
@@ -95,6 +95,7 @@
   color: gray;
   cursor: pointer;
   transition: all 0.1s ease-in-out;
+  opacity: 0;
 }
 
 .searchCta:hover {
@@ -143,6 +144,7 @@
 .leftWrapper {
   display: flex;
   gap: 5px;
+  opacity: 0;
 }
 
 .imgWrapper {
@@ -151,6 +153,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  opacity: 0;
 }
 
 .imgWrapper img {
